results/scraper/fex/1212
Build  it on termux? 
Can i build the emulator on termux?
```
~/FEX/build $ sudo ninja  install
[0/2] Re-checking globbed directories...
[10/283] Building C object External/jemall...akeFiles/FEX_jemalloc.dir/src/jemalloc.c.o
FAILED: External/jemalloc/CMakeFiles/FEX_jemalloc.dir/src/jemalloc.c.o
/data/data/com.termux/files/usr/bin/clang -DENABLE_JEMALLOC=1 -DGLOBAL_DATA_DIRECTORY=\"/usr/share/fex-emu/\" -D_GNU_SOURCE -D_M_ARM_64=1 -D_REENTRANT -I/data/data/com.termux/files/home/FEX/build/External/jemalloc -I/data/data/com.termux/files/home/FEX/External/jemalloc -I/data/data/com.termux/files/home/FEX/External/vixl/src -I/data/data/com.termux/files/home/FEX/External/xxhash -I/data/data/com.termux/files/home/FEX/External/jemalloc/pregen/include -I/data/data/com.termux/files/home/FEX/External/jemalloc/include -O3 -DNDEBUG -flto=thin -fPIC   -Wno-trigraphs -fvisibility=hidden -std=gnu11 -MD -MT External/jemalloc/CMakeFiles/FEX_jemalloc.dir/src/jemalloc.c.o -MF External/jemalloc/CMakeFiles/FEX_jemalloc.dir/src/jemalloc.c.o.d -o External/jemalloc/CMakeFiles/FEX_jemalloc.dir/src/jemalloc.c.o -c /data/data/com.termux/files/home/FEX/External/jemalloc/src/jemalloc.c
/data/data/com.termux/files/home/FEX/External/jemalloc/src/jemalloc.c:714:9: error: use of undeclared identifier 'secure_getenv'
        return secure_getenv(name);
               ^
/data/data/com.termux/files/home/FEX/External/jemalloc/include/jemalloc/internal/test_hooks.h:15:37: note: expanded from macro 'secure_getenv'
#define secure_getenv JEMALLOC_HOOK(secure_getenv, test_hooks_libc_hook)
                                    ^
/data/data/com.termux/files/home/FEX/External/jemalloc/src/jemalloc.c:744:3: warning: implicit declaration of function 'pthread_getaffinity_np' is invalid in C99 [-Wimplicit-function-declaration]
                pthread_getaffinity_np(pthread_self(), sizeof(set), &set);
                ^
/data/data/com.termux/files/home/FEX/External/jemalloc/src/jemalloc.c:3020:24: error: conflicting types for 'malloc_usable_size'
JEMALLOC_EXPORT size_t malloc_usable_size(void *ptr) {
                       ^
/data/data/com.termux/files/usr/include/malloc.h:104:8: note: previous declaration is here
size_t malloc_usable_size(const void* __ptr) __INTRODUCED_IN(17);
       ^
1 warning and 2 errors generated.
[19/283] Building C object External/jemalloc/CMakeFiles/FEX_jemalloc.dir/src/ctl.c.o
ninja: build stopped: subcommand failed.
~/FEX/build $
```